[gd_scene load_steps=33 format=2]

[ext_resource path="res://Graphics/Enemy/EnemyIdle1.png" type="Texture" id=1]
[ext_resource path="res://Graphics/EnemyRage1.png" type="Texture" id=2]
[ext_resource path="res://Graphics/Enemy/EnemySprint2.png" type="Texture" id=3]
[ext_resource path="res://Graphics/Enemy/EnemyDamage.png" type="Texture" id=4]
[ext_resource path="res://Graphics/Enemy/EnemyWalk2.png" type="Texture" id=5]
[ext_resource path="res://Graphics/Enemy/EnemySprint1.png" type="Texture" id=6]
[ext_resource path="res://Graphics/Enemy/EnemyIdle2.png" type="Texture" id=7]
[ext_resource path="res://Graphics/Enemy/EnemyAware.png" type="Texture" id=8]
[ext_resource path="res://Graphics/Enemy/EnemyWalk1.png" type="Texture" id=9]
[ext_resource path="res://Graphics/Enemy/EnemyRage2.png" type="Texture" id=10]
[ext_resource path="res://Scenes/EnemySurvival1.gd" type="Script" id=11]
[ext_resource path="res://Scenes/EnemyHitbox.gd" type="Script" id=12]
[ext_resource path="res://Scenes/AISurvival1.gd" type="Script" id=13]
[ext_resource path="res://Audio/FootstepsQuick.wav" type="AudioStream" id=15]
[ext_resource path="res://Audio/Footsteps.wav" type="AudioStream" id=16]
[ext_resource path="res://Audio/Screech3.wav" type="AudioStream" id=17]
[ext_resource path="res://Audio/Screech1.wav" type="AudioStream" id=18]
[ext_resource path="res://Audio/Jump.wav" type="AudioStream" id=19]
[ext_resource path="res://Audio/Screech2.wav" type="AudioStream" id=20]
[ext_resource path="res://Audio/Hit.wav" type="AudioStream" id=21]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 23.5955, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 23.5955, 8.49951 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 904.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 59.2435, 32 )

[sub_resource type="StreamTexture" id=5]
flags = 4
load_path = "res://.import/EnemyRage1.png-e750de623f29106b2ed12c19625a7e58.stex"

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 2.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": false,
"name": "aware",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "damage",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 3 ) ],
"loop": true,
"name": "sprint",
"speed": 4.0
}, {
"frames": [ SubResource( 5 ), ExtResource( 10 ) ],
"loop": true,
"name": "fall",
"speed": 2.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 10 ) ],
"loop": false,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 5 ) ],
"loop": true,
"name": "walk",
"speed": 3.0
} ]

[sub_resource type="Animation" id=7]
length = 0.1
step = 0.01

[sub_resource type="Animation" id=8]
length = 0.4

[sub_resource type="Animation" id=9]
length = 0.2
loop = true
step = 0.01

[sub_resource type="Animation" id=10]
length = 0.2
step = 0.01

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 19.9026, 25.4716 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 19.6924, 25.4716 )

[node name="EnemySurvival1" type="KinematicBody2D"]
position = Vector2( -616, 1608 )
collision_layer = 8
script = ExtResource( 11 )

[node name="AISurvival1" type="Node2D" parent="."]
script = ExtResource( 13 )

[node name="Wall" type="Area2D" parent="AISurvival1"]
position = Vector2( 0.404541, -47.5005 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D5" type="CollisionShape2D" parent="AISurvival1/Wall"]
position = Vector2( 32, -40 )
shape = SubResource( 1 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="AISurvival1/Wall"]
position = Vector2( -40, -40 )
shape = SubResource( 1 )

[node name="Obstacle" type="Area2D" parent="AISurvival1"]
position = Vector2( 0, 4.77295 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D3" type="CollisionShape2D" parent="AISurvival1/Obstacle"]
position = Vector2( 32.4045, 0.499512 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AISurvival1/Obstacle"]
position = Vector2( -39.5955, 0.499512 )
shape = SubResource( 2 )

[node name="RightClose" type="Area2D" parent="AISurvival1"]
collision_layer = 131073
collision_mask = 131073

[node name="CollisionShape2D" type="CollisionShape2D" parent="AISurvival1/RightClose"]
position = Vector2( 32.4045, 0.499512 )
shape = SubResource( 3 )

[node name="LeftClose" type="Area2D" parent="AISurvival1"]
collision_layer = 131073
collision_mask = 131073

[node name="CollisionShape2D" type="CollisionShape2D" parent="AISurvival1/LeftClose"]
position = Vector2( -39.5955, 0.499512 )
shape = SubResource( 3 )

[node name="Up" type="Area2D" parent="AISurvival1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AISurvival1/Up"]
position = Vector2( -3.24347, -68.4137 )
shape = SubResource( 4 )

[node name="Rightlimit" type="Node2D" parent="AISurvival1"]
position = Vector2( 16, 0 )

[node name="Leftlimit" type="Node2D" parent="AISurvival1"]
position = Vector2( -24, 0.499512 )

[node name="HoldTimer" type="Timer" parent="AISurvival1"]
one_shot = true

[node name="SeekTimer" type="Timer" parent="AISurvival1"]
one_shot = true

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 1.11609 )
scale = Vector2( 1.17111, 1.17111 )
frames = SubResource( 6 )
playing = true

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="EffectsPlayer" type="AnimationPlayer" parent="."]
anims/Damage = SubResource( 7 )
anims/Dead = SubResource( 8 )
anims/Invulnerable = SubResource( 9 )
anims/Neutral = SubResource( 10 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 3.05176e-05, -0.0883789 )
collision_layer = 524288
collision_mask = 524288
script = ExtResource( 12 )

[node name="Coll" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -3.06677, 1.38318 )
shape = SubResource( 11 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Coll" type="CollisionShape2D" parent="."]
position = Vector2( -3.24347, 1.2948 )
shape = SubResource( 12 )

[node name="Sound" type="Node2D" parent="."]
position = Vector2( -7.66663, 13.1921 )

[node name="Screech3" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 17 )

[node name="Screech2" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 20 )

[node name="Screech1" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 18 )

[node name="StepQuick" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 15 )
volume_db = -5.0

[node name="Step" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 16 )
volume_db = -5.0

[node name="Jump" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 19 )
volume_db = 7.0

[node name="Hit" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 21 )

[connection signal="timeout" from="AISurvival1/HoldTimer" to="AISurvival1" method="_on_HoldTimer_timeout"]
[connection signal="timeout" from="HitTimer" to="." method="_on_HitTimer_timeout"]
[connection signal="Hit" from="Area2D" to="." method="_on_Area2D_Hit"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
